Ajustes no Dark Mode

--- a/backend/Saboreie/receitas/templates/receitas/comentarios.html
+++ b/backend/Saboreie/receitas/templates/receitas/comentarios.html
@@ -4,6 +4,32 @@
 
 {% block content %}
 
+<style>
+
+    body.dark .bg-light {
+        color: #000000 !important;
+    }
+
+    body.dark .bg-light h4,
+    body.dark .bg-light p,
+    body.dark .bg-light strong,
+    body.dark .bg-light span,
+    body.dark .bg-light div {
+        color: #000000 !important;
+    }
+
+    small.text-muted {
+    color: #6c757d !important;
+    }
+    #caracteres-restantes {
+        color: #6c757d !important;
+    }
+    body.dark .section-card small.text-muted {
+        color: #6c757d !important;
+    }
+
+</style>
+
 <!-- Configuração do Layout do Conteúdo principal da página -->
 <div class="container mt-5">
     <div class="row justify-content-center">
